--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,10 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "235b60b8-fd1f-4081-92ae-3af2035bc8e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Importing necessary libraries\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mfeature_extraction\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtext\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m CountVectorizer\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'numpy'"
+     ]
+    }
+   ],
    "source": [
     "# Importing necessary libraries\n",
     "import numpy as np\n",
@@ -19,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "3ab859b5-4568-4fb5-a769-d2867f1706b9",
    "metadata": {},
    "outputs": [],
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "78e3ccd3-703a-4c46-93a1-b66a8654d7b9",
    "metadata": {},
    "outputs": [],
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "af761790-bd09-4fe2-afba-03a964ba20cb",
    "metadata": {},
    "outputs": [
@@ -156,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "3521381a-e8ac-4031-9c43-53d025a578a2",
    "metadata": {},
    "outputs": [
@@ -415,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "8d1145d3-db82-41e5-b082-c3b3f80ce034",
    "metadata": {},
    "outputs": [],
@@ -426,18 +438,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "72d748cc-ab35-43e1-9903-c997b16009e1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select relevant features (columns)\n",
-    "movies_df = movies_df[['movie_id', 'title', 'overview', 'genres', 'keywords', 'cast', 'crew']]"
+    "movies_df = movies_df[['movie_id', 'title',\n",
+    "                       'overview', 'genres', 'keywords', 'cast', 'crew']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "967bc903-a01d-4971-9550-eee7e00f442c",
    "metadata": {},
    "outputs": [],
@@ -448,38 +461,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "bb65527b-8cc1-4e8c-a960-9a49374f0f01",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Text preprocessing functions\n",
-    "\n"
+    "# Text preprocessing functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "b12f0e0d-9524-4947-892f-92ae1e9249f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to convert JSON strings to lists of dictionaries\n",
     "def convert(obj):\n",
-    "    return [i['name'] for i in ast.literal_eval(obj)]\n",
-    "\n"
+    "    return [i['name'] for i in ast.literal_eval(obj)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "b4df2166-3334-41ac-a5b2-bbe623d3d49e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Function to extract only the first 3 names from the cast list\n",
     "def convert3(obj):\n",
-    "    L=[]\n",
+    "    L = []\n",
     "    counter = 0\n",
     "    for i in ast.literal_eval(obj):\n",
     "        if counter != 3:\n",
@@ -487,13 +498,12 @@
     "            counter += 1\n",
     "        else:\n",
     "            break\n",
-    "    return L\n",
-    "\n"
+    "    return L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "66491467-be09-451a-a7a5-041f0e09653d",
    "metadata": {},
    "outputs": [],
@@ -510,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "ac804837-d0d2-4314-ba82-7514f95ef059",
    "metadata": {},
    "outputs": [
@@ -533,7 +543,7 @@
    ],
    "source": [
     "# Apply text preprocessing to relevant columns\n",
-    "movies_df['overview'] = movies_df['overview'].apply(lambda x:x.split())\n",
+    "movies_df['overview'] = movies_df['overview'].apply(lambda x: x.split())\n",
     "movies_df['genres'] = movies_df['genres'].apply(convert)\n",
     "movies_df['keywords'] = movies_df['keywords'].apply(convert)\n",
     "movies_df['cast'] = movies_df['cast'].apply(convert3)\n",
@@ -542,17 +552,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "91ed4b4e-7030-4755-83ed-48b86d613023",
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies_df['tags'] = movies_df['overview'] + movies_df['genres'] + movies_df['keywords'] + movies_df['cast'] + movies_df['crew']"
+    "movies_df['tags'] = movies_df['overview'] + movies_df['genres'] + \\\n",
+    "    movies_df['keywords'] + movies_df['cast'] + movies_df['crew']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "7553a31a-e924-4838-92dd-2a610f9f7d0f",
    "metadata": {},
    "outputs": [
@@ -586,8 +597,7 @@
    "outputs": [],
    "source": [
     "# Calculate cosine similarity between movie vectors\n",
-    "similarity = cosine_similarity(vectors)\n",
-    "\n"
+    "similarity = cosine_similarity(vectors)"
    ]
   },
   {
@@ -604,13 +614,13 @@
     "    # Get similarity scores of input movie with all others\n",
     "    distances = similarity[movie_index]\n",
     "    # Sort movies by similarity scores and select top 5 (excluding input movie)\n",
-    "    movies_list = sorted(list(enumerate(distances)), reverse=True, key=lambda x:x[1])[1:6]\n",
-    "    \n",
+    "    movies_list = sorted(list(enumerate(distances)),\n",
+    "                         reverse=True, key=lambda x: x[1])[1:6]\n",
+    "\n",
     "    # Print titles of recommended movies\n",
     "    print(\"Recommended movies for '{}':\".format(movie))\n",
     "    for i in movies_list:\n",
-    "        print(new_df.iloc[i[0]].title)\n",
-    "\n"
+    "        print(new_df.iloc[i[0]].title)"
    ]
   },
   {
@@ -659,7 +669,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
